--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
    font-size: 64px;
    color: black;
    font-family: "Josefin Slab";
+   background-color: #F2DAAC;
+   opacity: 85%;
+   border-radius: 10px;
+   height: 257px;
+   width: 640px;
 }
 .navBar {
    display: flex;
@@ -27,13 +32,14 @@ body {
 }
 .headerImg {
    float: right;
-   border-radius:8%;
+   border-radius: 10px;
    width:914px;
    height: 299px;
 }
 .headerTwo {
    color: #731702;
    font-family: "Klee One";
+   font-size:48px;
 }
 .aboutAndSkills {
    display: flex;
@@ -43,7 +49,8 @@ body {
 .skills {
    flex: 1;
    margin: 0 10px;
-   border-radius: 25px;
+   border-radius: 10px;
+   font-size: 24px;
 }
 .aboutMe {
    background-color: #f2daac;
@@ -68,6 +75,7 @@ body {
 .projectBox {
    display: flex;
    justify-content: space-around;
+   font-size: 24px;
 }
 .projectBox1,
 .projectBox2,
@@ -77,19 +85,27 @@ body {
    padding-bottom: 50px;
    background-color: #f2daac;
    border-radius: 25px;
+   height: 466px;
 } 
+.description{
+   padding: 10px;
+   margin: 10px;
+   display: flex;
+   align-items: center;
+   justify-items: center;
+}
 .headerThree {
    color: black;
 }
 .button {
    background-color: #f1c84a;
    color: black;
-   border-radius: 15px;
+   border-radius: 10px;
    padding: 14px;
    display: flex;
    flex-direction: column;
    justify-content: center;
-   
+   font: "Klee One";
 }
 .portrait {
    width: 100%; 
@@ -106,13 +122,14 @@ body {
    display: table-column-group;
    align-content: space-around;
 }
-.descripion{
-   padding: 10px;
-   margin: 10px;
+#socialButtons {
+   height: 24x;
+   width: 24px;
 }
 footer {
    opacity: 0.85;
    background-color: #f2daac;
+   height: 283px;
 }
 
 
