--- a/style.css
+++ b/style.css
@@ -1,81 +1,110 @@
+/* entire page */
 body {
    display: flex;
    flex-direction: column;
-   font-family: "Josefin Slab", "Klee One";
+   font-family: "Josefin Slab", "Khula";
 }
-.headerOne {
-   font-size: 64px;
-   color: black;
-   font-family: "Josefin Slab";
-   background-color: #F2DAAC;
-   opacity: 85%;
-   border-radius: 10px;
-   height: 257px;
-   width: 640px;
-}
+
+/* Homepage header section */
+
+/* Navigation */
 .navBar {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    margin-left: 30px;
    padding: auto;
-   text-decoration: underline;
-   text-underline-offset: 10px;
+   border-bottom: 10px black;
 }
+.homeItem,
+.aboutItem,
+.caseItem {
+   padding: 0px 25px 25px 0px;
+   font-family: "Khula";
+   font-size: 24px;
+   margin-top: 14px;
+}
+
+ /* Header */
+header {
+   background-color: #F2DAAC;
+   opacity: 85%;
+   border-radius: 10px;
+   height: 183px;
+   width: 1226px;
+   display: flex;
+   flex-direction: row-reverse; 
+ }
 #headerName {
    font-size: 64px;
+   color: black;
    font-family: "Josefin Slab";
+   margin-bottom: 0;
+   display: flex;
+   justify-content: flex-start;
 }
 #headerJob {
    font-size: 24px;
-   font-family: "Klee One";
+   font-family: "Khula";
+   margin-top: 0;
+   display: flex;
+   justify-content: flex-start;
 }
-.headerImg {
-   float: right;
-   border-radius: 10px;
-   width:914px;
-   height: 299px;
-}
+
+/* About Me */
 .headerTwo {
    color: #731702;
-   font-family: "Klee One";
+   font-family: "Khula";
    font-size:48px;
+   height: 58px;
+   padding-left: 106.5px;
+   padding-bottom: 114px;
 }
-.aboutAndSkills {
+.aboutAndPort {
    display: flex;
+   flex-direction: row-reverse;
+   justify-content: flex-start;
    margin-top: 20px;
-}
-.aboutMe,
-.skills {
-   flex: 1;
    margin: 0 10px;
    border-radius: 10px;
+   background-color: #f2daac;
+   opacity: 0.85;
+   width: 1227px;
+   height: 373px;
+}
+.portrait {
+   width: 100%; 
+   height: auto; 
+   border-radius: 8%;
+   display: flex;
+   justify-content: flex-start;
+}
+#portrait{
+   width: 400px;
+   height: 400px;
+}
+.aboutDescription {
    font-size: 24px;
+   font-family: "Khula";
+   width: 451px;
+   height: 342px;
+   margin-left: 128px;
+   display: flex;
+   justify-content: flex-end;
 }
-.aboutMe {
-   background-color: #f2daac;
-   opacity: 0.85;
-   padding: 10px;
-   width: 634px;
-   height: 317;
-   flex: 66%;
-}
-.skills {
-   background-color: #f2daac;
-   opacity: 0.85;
-   padding: 10px;
-   width: 317px;
-   height: 257px;
-   flex: 33%;
-}
+
+/*Case Studies*/
+
 .caseStudiesContainer {
-   text-align: center;
-   margin-top: 20px;
+   text-align: left;
+   margin-top: 197px;
 }
 .projectBox {
    display: flex;
    justify-content: space-around;
    font-size: 24px;
+   font-family: "Khula";
+   text-align: center;
 }
 .projectBox1,
 .projectBox2,
@@ -97,6 +126,9 @@ body {
 .headerThree {
    color: black;
 }
+
+/*Lets Connect*/
+
 .button {
    background-color: #f1c84a;
    color: black;
@@ -105,33 +137,45 @@ body {
    display: flex;
    flex-direction: column;
    justify-content: center;
-   font: "Klee One";
-}
-.portrait {
-   width: 100%; 
-   height: auto; 
-   border-radius: 8%;
-   margin-top: 20px; 
-}
-#portrait{
-   width: 400px;
-   height: 400px;
+   font: "Khula";
 }
 .connect {
    display: flex;
    display: table-column-group;
    align-content: space-around;
 }
-#socialButtons {
-   height: 24x;
+.socialButtons {
+   height: 24px;
    width: 24px;
 }
+
+/*Footer*/
+
 footer {
    opacity: 0.85;
    background-color: #f2daac;
    height: 283px;
+   display: flex;
+   align-content: center;
 }
+.footerName {
+   font-size: 64px;
+   font-family: "Josefin Slab"
+}
+.footerNav {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
 
+}
+.homeItemFoot,
+.aboutItemFoot,
+.caseItemFoot {
+   font: "Khula";
+   font-size: 24px;
+   padding-bottom: 41px;
+   margin:0;
+}
 
 /*
 
