--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,21 @@ body {
    display: flex;
    flex-direction: column;
    font-family: "Josefin Slab", "Khula";
+   img.bg {
+      min-height: 100%;
+      min-width: 1024px;
+      width: 100%;
+      height: auto;
+      position: fixed;
+      top: 0;
+      left: 0;
+  }
+  @media screen and (max-width: 1024px) {
+      img.bg {
+          left: 50%;
+          margin-left: -512px;
+      }
+  }
 }
 
 /* Homepage header section */
